# Expense-Tracker

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Sidebar.jsx
frontend/src/pages/: Budgets.jsx  Dashboard.jsx  Goals.jsx  Home.jsx  Login.jsx  Register.jsx  Savings.jsx  Settings.jsx  Transactions.jsx
sql/: schema.sql
src/: auth_manager.cpp  auth_manager.h  main.cpp
src/db/: db_manager.cpp  db_manager.h
